# triarb

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  backtest.toml  docker-compose.yml  production.toml  prometheus.yml
.github/workflows/: ci.yml
ta-analysis/: pyproject.toml  requirements.txt
ta-analysis/notebooks/: analysis.ipynb
ta-analysis/src/ta_analysis/: config.py  loader.py  metrics.py  models.py  visualize.py
ta-analysis/tests/: test_metrics.py
ta-bench/: Cargo.toml
ta-bench/src/: main.rs
ta-bin/: Cargo.toml
ta-bin/examples/: live_feed.rs  record_ticks.rs
ta-bin/src/: backtest.rs  cli.rs  config.rs  main.rs  metrics.rs
ta-config/: Cargo.toml
ta-config/src/: lib.rs
ta-core/: Cargo.toml
ta-core/src/: lib.rs
ta-dashboard/: pom.xml
ta-dashboard/src/main/java/com/triangulararb/dashboard/: DashboardApplication.java
ta-dashboard/src/main/java/com/triangulararb/dashboard/application/: PnLService.java
ta-dashboard/src/main/java/com/triangulararb/dashboard/domain/model/: EquityPoint.java  Opportunity.java  PnLSummary.java  Trade.java
ta-dashboard/src/main/java/com/triangulararb/dashboard/domain/port/: PnLRepository.java  TradeStreamListener.java
ta-dashboard/src/main/java/com/triangulararb/dashboard/infrastructure/persistence/: InMemoryPnLRepository.java
ta-dashboard/src/main/java/com/triangulararb/dashboard/infrastructure/redis/: RedisConfig.java  RedisTradeSubscriber.java  TradeStreamBridge.java
ta-dashboard/src/main/java/com/triangulararb/dashboard/infrastructure/web/: PnLController.java  PnLWebSocketHandler.java  WebSocketConfig.java
ta-dashboard/src/main/resources/: application.properties
ta-dashboard/src/test/java/com/triangulararb/dashboard/application/: PnLServiceTest.java
ta-dashboard/src/test/java/com/triangulararb/dashboard/arch/: HexagonalArchTest.java
ta-detect/: Cargo.toml
ta-detect/src/: lib.rs
ta-exec/: Cargo.toml
ta-exec/src/: clock_skew.rs  hedge.rs  journal.rs  lib.rs  order_timeout.rs  price_check.rs  risk.rs
ta-feed/: Cargo.toml
ta-feed/src/: lib.rs
ta-sim/: Cargo.toml
ta-sim/src/: lib.rs
