[workspace]
resolver = "2"
members = ["ta-core", "ta-config", "ta-feed", "ta-detect", "ta-exec", "ta-sim", "ta-bin", "ta-bench"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
of_core = "0.4"
of_adapters = "0.4"
of_execution_core = "0.1"
of_execution = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dashmap = "6"
rustc-hash = "2"
sha2 = "0.10"
axum = "0.7"
prometheus = "0.13"
hyper = { version = "1", features = ["server", "http1"] }
tokio-util = "0.7"
ta-config = { path = "ta-config" }
ta-core = { path = "ta-core" }
ta-feed = { path = "ta-feed" }
ta-detect = { path = "ta-detect" }
ta-exec = { path = "ta-exec" }
ta-sim = { path = "ta-sim" }
ta-bin = { path = "ta-bin" }
