[package]
name = "ta-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
of_core.workspace = true
of_execution_core.workspace = true
of_execution.workspace = true
ta-core.workspace = true
ta-detect.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

